<resources>
    <string name="app_name">Yasunnae</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="location_certificate">위치인증</string>
    <string name="do_location_certificate">위치인증하기</string>

    <string name="verified_location">위치가 인증되었습니다</string>
    <string name="failed_get_location">위치를 가져오지 못했습니다</string>
    <string name="bad_request">잘못된 요청입니다</string>
    <string name="unknown_error">알 수 없는 오류가 발생했습니다</string>
    <string name="applicant_list">신청자 목록</string>
    <string name="tilde">~</string>
    <string name="go_to_post">게시글 보기</string>
    <string name="accept">수락</string>
    <string name="accept_complete">수락완료</string>
    <string name="try_it_later">잠시 후 다시 시도해주세요</string>
    <string name="accept_success">수락되었습니다</string>
    <string name="application_not_found">신청을 찾을 수 없습니다</string>
    <string name="post_not_found">게시물을 찾을 수 없습니다</string>

    <string name="home">홈</string>
    <string name="write_post">글작성</string>
    <string name="my_applications">신청목록</string>록
    <string name="my_profile">마이페이지</string>

    <string name="new_post">최신 게시물</string>
    <string name="go_verify_location">위치인증 하러가기</string>
    <string name="dont_you_verified_location">아직 위치인증을 하지 않으셨나요?</string>
    <string name="empty_post_list">게시물이 아무것도 낫띵 없어용</string>
    <string name="need_to_verify_location">위치인증을 하고 모든 서바스를 이용해보세요!</string>
    <string name="go_verify">위치인증 하기</string>
    <string name="do_it_later">나중에 할래요</string>
    <string name="mammal">포유류</string>
    <string name="bird">조류</string>
    <string name="reptiles">파충류</string>
    <string name="amphibians">양서류</string>
    <string name="fish">어류</string>
    <string name="arthropods">절지동물</string>

    <string name="register_account">회원가입</string>
    <string name="do_register_account">회원가입 완료</string>
    <string name="complete_register_account">회원가입에 성공하였습니다!</string>
    <string name="email">이메일</string>
    <string name="email_verify">이메일 인증</string>
    <string name="input_verify_number">인증번호를 입력해주세요</string>
    <string name="password">비밀번호</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="age">나이</string>
    <string name="age_unit">세</string>
    <string name="have_ever_raised_pet">반려동물을 키워본 적이 있나요?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="experience">경험</string>
    <string name="input_experience">반려동물을 키운 경험에 대해 설명할 사항이 있으면 작성해주세요</string>
    <string name="send">전송</string>
    <string name="duplicate">중복</string>
    <string name="ok">확인</string>
    <string name="zero_zero">00</string>
    <string name="duplicate_email">중복되는 이메일입니다.</string>
    <string name="non_email_form">올바른 이메일 형식이 아닙니다.</string>
    <string name="send_failed">전송이 제대로 되지 않았습니다.</string>
    <string name="ok_email">사용 가능한 이메일입니다.</string>
    <string name="ok_send_email">이메일로 인증번호를 전송했습니다.</string>
    <string name="incorrect_verify_number">인증번호가 올바르지 않습니다.</string>
    <string name="different_password">비밀번호가 다릅니다.</string>
    <string name="wrong_password_format">비밀번호는 8~15자 영문+숫자+특수문자 조합으로 만들어주세요.</string>
    <string name="duplicate_nickname">중복되는 닉네임입니다.</string>
    <string name="ok_nickname">사용 가능한 닉네임입니다.</string>
    <string name="please_input_age">나이를 입력해주세요.</string>
    <string name="ok_ok">확인되었습니다.</string>
    <string name="need_to_verify_email">이메일 인증이 필요합니다.</string>
    <string name="need_to_check_password">비밀번호 확인이 필요합니다.</string>
    <string name="need_to_check_nickname">닉네임 중복 확인이 필요합니다.</string>
    <string name="check_things">입력을 확인해주세요.</string>
    <string name="experience_false">반려동물을 키워본 적이 없으면 경험 칸을 작성할 수 없습니다.</string>

    <string name="hello">안녕하세요~</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="welcome">Welcome!</string>
    <string name="do_login">로그인하기</string>
    <string name="it_is_ggosunnae">모두가 행복한 반려동물 맡김 서비스 \n꼬순내 친구들입니다</string>
    <string name="login_warning">이메일이나 비밀번호가 올바르지 않습니다.</string>
    <string name="login_empty">이메일이나 비밀번호를 입력해주세요.</string>
    <string name="non_existent_email">이메일이 존재하지 않습니다.</string>
    <string name="complete_login">로그인에 성공하였습니다!</string>
    <string name="oops">어쩐담!</string>
    <string name="cry">ㅠ</string>
    <string name="you_are_blocked">이를 어째! 당신은 차단돼서</string>
    <string name="you_are_blocked2">여기 들어올 수 없어욥</string>


    <string name="title_write_post">게시글 작성</string>
    <string name="title_edit_post">게시글 수정</string>
    <string name="title">제목</string>
    <string name="date">날짜</string>
    <string name="from">부터</string>
    <string name="until">까지</string>
    <string name="deadline">마감일</string>
    <string name="description">설명</string>
    <string name="contacts">연락처(전화번호, 카카오톡 오픈채팅 등)</string>
    <string name="pet_photo">반려동물 사진 (최대 5장, 최소 1장 이상)</string>
    <string name="name">이름</string>
    <string name="species">종</string>
    <string name="input_title">게시글의 제목을 입력해주세요</string>
    <string name="input_description">게시글에 대한 추가 설명을 작성해주세요 예) 여행 이유, 반려동물 성격, 좋아하는 간식 등</string>
    <string name="input_contacts">연락처를 입력해주세요</string>
    <string name="input_pet_name">반려동물의 이름을 입력해주세요</string>
    <string name="input_pet_species">반려동물의 종을 입력해주세요</string>
    <string name="input_pet_gender">반려동물의 성별을 입력해주세요</string>
    <string name="complete_write">작성 완료</string>
    <string name="complete_edit">수정 완료</string>
    <string name="limit_post_title">/30</string>
    <string name="limit_post_description">/225</string>
    <string name="limit_post_contacts">/100</string>

    <string name="deadline_colon">마감일:</string>
    <string name="contacts_colon">연락처:</string>
    <string name="comments">댓글</string>
    <string name="please_input_comment">댓글을 입력해주세요.</string>
    <string name="updated">수정됨</string>
    <string name="do_apply">신청하기</string>
    <string name="cancel_apply">신청 취소하기</string>
    <string name="see_applications">신청 목록 보기</string>
    <string name="edit">수정</string>
    <string name="cancel">취소</string>
    <string name="edit_comment">댓글 수정</string>
    <string name="please_edit_comment">수정할 댓글을 입력해주세요</string>
    <string name="comment_not_found">댓글을 찾을 수 없습니다</string>
    <string name="conflict">충돌이 발생했습니다</string>
    <string name="application_conflict">이미 신청한 게시글이 있습니다</string>

    <string name="all">전체</string>
    <string name="application_end">신청 마감</string>
    <string name="ask_delete_post">게시글을 삭제하시겠습니까?</string>
    <string name="complete_delete_post">게시글을 삭제했습니다</string>
    <string name="ask_delete_comment">댓글을 삭제하시겠습니까?</string>
    <string name="complete_delete_comment">댓글을 삭제했습니다</string>
    <string name="max_is_five">사진은 최대 5장 입니다</string>
    <string name="hyphen">-</string>

<<<<<<< Updated upstream
    <string name="review">리뷰</string>
    <string name="post">게시글</string>
    <string name="greet_hello">안녕하세요~</string>
    <string name="logout">로그아웃</string>
    <string name="report">신고</string>
    <string name="star">별점</string>
    <string name="location">위치</string>
    <string name="grade">등급</string>
    <string name="has_experience">펫 키워본 적</string>
    <string name="respect">님,</string>
    <string name="have">있음</string>
    <string name="none">없음</string>
    <string name="ask_delete_review">리뷰를 삭제하시겠습니까?</string>
    <string name="complete_report">사용자 신고가 접수되었습니다</string>
    <string name="change">변경</string>
    <string name="register">등록</string>
    <string name="no_location">위치인증 안 함</string>
    <string name="write_report_reason">신고 사유를 적어주세요</string>
    <string name="user_report">사용자 신고</string>
    <string name="write_review">리뷰 작성하기</string>
    <string name="please_write_review">님에게 리뷰를 남겨주세요</string>
    <string name="need_to_interested">서로 교류가 있어야 리뷰를 남길 수 있습니다</string>
    <string name="no_post">작성한 게시글이 없습니다</string>
    <string name="no_review">작성된 리뷰가 없습니다</string>
=======
    <string name="review_write">리뷰 작성</string>


>>>>>>> Stashed changes
</resources>