<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presentComment"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radius_dialog"
        android:backgroundTint="@color/white">

        <TextView
            android:id="@+id/tv_title_edit_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_comment"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_edit_Comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_radius_banner"
            android:backgroundTint="@color/ivory"
            android:hint="@string/please_edit_comment"
            android:inputType="text"
            android:padding="10dp"
            android:text="@{presentComment}"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_edit_comment"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/btn_edit_comment"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/edit"
            android:textColor="@color/red_orange"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_cancel_edit_comment"
            app:layout_constraintTop_toBottomOf="@id/et_edit_Comment"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btn_cancel_edit_comment"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_edit_Comment"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>