<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="240dp"
        android:layout_height="195dp"
        android:background="@drawable/shape_radius_dialog"
        android:backgroundTint="@color/white">

        <TextView
            android:id="@+id/tv_need_to_verify_location_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/need_to_verify_location"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/image_footprint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_need_to_verify_location_dialog"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/btn_go_verify"
            android:layout_width="88dp"
            android:layout_height="21dp"
            android:layout_margin="15dp"
            android:background="@drawable/shape_radius_banner"
            android:backgroundTint="@color/red_orange"
            android:gravity="center"
            android:text="@string/go_verify"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/btn_do_it_later"
            android:layout_width="88dp"
            android:layout_height="21dp"
            android:layout_margin="15dp"
            android:background="@drawable/shape_radius_banner"
            android:backgroundTint="@color/light_orange"
            android:gravity="center"
            android:text="@string/do_it_later"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>